// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sinonNthCalledWith includes the custom mock name in the error message 1`] = `
"expect(named-mock).not.sinonNthCalledWith(n, ...expected)

n: 1
Expected: not \\"foo\\", \\"bar\\"

Number of calls: 1"
`;

exports[`sinonNthCalledWith negative throw matcher error for n that is not integer 1`] = `
"expect(received).not.sinonNthCalledWith(n, ...expected)

Matcher error: n must be a positive integer

n has type:  number
n has value: Infinity"
`;

exports[`sinonNthCalledWith positive throw matcher error for n that is not integer 1`] = `
"expect(received).sinonNthCalledWith(n, ...expected)

Matcher error: n must be a positive integer

n has type:  number
n has value: 0.1"
`;

exports[`sinonNthCalledWith positive throw matcher error for n that is not positive integer 1`] = `
"expect(received).sinonNthCalledWith(n, ...expected)

Matcher error: n must be a positive integer

n has type:  number
n has value: 0"
`;

exports[`sinonNthCalledWith works only on stubs or sinon.spy 1`] = `
"expect(received).sinonNthCalledWith(n, ...expected)

Matcher error: received value must be a stub or spy function

Received has type:  function
Received has value: [Function fn]"
`;

exports[`sinonNthCalledWith works when not called 1`] = `
"expect(sinon.spy()).sinonNthCalledWith(n, ...expected)

n: 1
Expected: \\"foo\\", \\"bar\\"

Number of calls: 0"
`;

exports[`sinonNthCalledWith works with Immutable.js objects 1`] = `
"expect(sinon.spy()).not.sinonNthCalledWith(n, ...expected)

n: 1
Expected: not Immutable.Map {\\"a\\": {\\"b\\": \\"c\\"}}, Immutable.Map {\\"a\\": {\\"b\\": \\"c\\"}}

Number of calls: 1"
`;

exports[`sinonNthCalledWith works with Map 1`] = `
"expect(sinon.spy()).not.sinonNthCalledWith(n, ...expected)

n: 1
Expected: not Map {1 => 2, 2 => 1}

Number of calls: 1"
`;

exports[`sinonNthCalledWith works with Map 2`] = `
"expect(sinon.spy()).sinonNthCalledWith(n, ...expected)

n: 1
- Expected
+ Received

  Map {
-   \\"a\\" => \\"b\\",
-   \\"b\\" => \\"a\\",
+   1 => 2,
+   2 => 1,
  },

Number of calls: 1"
`;

exports[`sinonNthCalledWith works with Set 1`] = `
"expect(sinon.spy()).not.sinonNthCalledWith(n, ...expected)

n: 1
Expected: not Set {1, 2}

Number of calls: 1"
`;

exports[`sinonNthCalledWith works with Set 2`] = `
"expect(sinon.spy()).sinonNthCalledWith(n, ...expected)

n: 1
- Expected
+ Received

  Set {
-   3,
-   4,
+   1,
+   2,
  },

Number of calls: 1"
`;

exports[`sinonNthCalledWith works with arguments that don't match 1`] = `
"expect(sinon.spy()).sinonNthCalledWith(n, ...expected)

n: 1
Expected: \\"foo\\", \\"bar\\"
Received: \\"foo\\", \\"bar1\\"

Number of calls: 1"
`;

exports[`sinonNthCalledWith works with arguments that don't match in number of arguments 1`] = `
"expect(sinon.spy()).sinonNthCalledWith(n, ...expected)

n: 1
Expected: \\"foo\\", \\"bar\\"
Received: \\"foo\\", \\"bar\\", \\"plop\\"

Number of calls: 1"
`;

exports[`sinonNthCalledWith works with arguments that don't match with matchers 1`] = `
"expect(sinon.spy()).sinonNthCalledWith(n, ...expected)

n: 1
Expected: Any<String>, Any<Number>
Received: \\"foo\\", \\"bar\\"

Number of calls: 1"
`;

exports[`sinonNthCalledWith works with arguments that don't match with matchers even when argument is undefined 1`] = `
"expect(sinon.spy()).sinonNthCalledWith(n, ...expected)

n: 1
Expected: \\"foo\\", Any<String>
Received: \\"foo\\", undefined

Number of calls: 1"
`;

exports[`sinonNthCalledWith works with arguments that match 1`] = `
"expect(sinon.spy()).not.sinonNthCalledWith(n, ...expected)

n: 1
Expected: not \\"foo\\", \\"bar\\"

Number of calls: 1"
`;

exports[`sinonNthCalledWith works with arguments that match with matchers 1`] = `
"expect(sinon.spy()).not.sinonNthCalledWith(n, ...expected)

n: 1
Expected: not Any<String>, Any<String>
Received:     0, [\\"foo\\", \\"bar\\"]

Number of calls: 1"
`;

exports[`sinonNthCalledWith works with three calls 1`] = `
"expect(sinon.spy()).not.sinonNthCalledWith(n, ...expected)

n: 1
Expected: not \\"foo1\\", \\"bar\\"
Received
->     1:     \\"foo1\\", \\"bar\\"
       2:     \\"foo\\", \\"bar1\\"

Number of calls: 3"
`;

exports[`sinonNthCalledWith works with trailing undefined arguments if requested by the match query 1`] = `
"expect(sinon.spy()).not.sinonNthCalledWith(n, ...expected)

n: 1
Expected: not \\"foo\\", undefined

Number of calls: 1"
`;

exports[`sinonNthCalledWith works with trailing undefined arguments when explicitly requested as optional by matcher 1`] = `
"expect(sinon.spy()).not.sinonNthCalledWith(n, ...expected)

n: 1
Expected: not \\"foo\\", optionalFn<>
Received:     0, [\\"foo\\", undefined]

Number of calls: 1"
`;
